--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,46 @@
 name: Build Android APK
-on: [push]
+on: [push, workflow_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      # 1. Ambil kode dari repository (Gunakan versi v4 terbaru)
+      - uses: actions/checkout@v4
 
-      # Langkah 1: Siapkan Buildozer
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action-v1@v1
-        id: buildozer
+      # 2. Siapkan Java (Dibutuhkan Android)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          command: buildozer android debug
-          buildozer_version: master
+          distribution: 'temurin'
+          java-version: '17'
 
-      # Langkah 2: Upload Hasil APK
+      # 3. Instal semua kebutuhan sistem (Manual agar tidak error repository not found)
+      - name: Install System Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            python3-pip build-essential git python3 \
+            python3-dev ffmpeg libsdl2-dev libsdl2-image-dev \
+            libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
+            libswscale-dev libavformat-dev libavcodec-dev \
+            zlib1g-dev libltdl-dev libffi-dev libssl-dev \
+            autoconf autotools-dev
+          
+      # 4. Instal Buildozer & Cython
+      - name: Install Buildozer
+        run: |
+          pip install --upgrade pip
+          pip install buildozer cython==0.29.33
+
+      # 5. Jalankan Perintah Build (Yes otomatis)
+      - name: Build APK
+        run: yes | buildozer android debug
+
+      # 6. Upload Hasil APK (Gunakan versi v4 terbaru)
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: package
           path: bin/*.apk
