--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,55 +1,54 @@
-name: Build Android APK
-on:
-  push:
-    branches: [ main ]
+name: Build APK Stabil
+on: [push, workflow_dispatch]
 
 jobs:
   build:
+    # KITA PAKAI UBUNTU 22.04 AGAR LEBIH STABIL
     runs-on: ubuntu-22.04
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      # 1. Siapkan Java 17 (Wajib untuk Android jaman now)
-      - name: Setup Java
-        uses: actions/setup-java@v3
+      # 1. SIAPKAN PYTHON 3.9 (Paling cocok buat Kivy)
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      # 2. SIAPKAN JAVA (Wajib buat Android)
+      - name: Set up Java
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 2. Siapkan Python 3.10
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      # 3. Install Alat-Alat Linux (Manual)
-      # Kita install sendiri supaya tidak tergantung plugin orang lain
-      - name: Install System Dependencies
+      # 3. INSTAL ALAT-ALAT PENTING (Manual)
+      - name: Install Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            build-essential libltdl-dev libffi-dev libssl-dev \
-            python3-dev git zip unzip autoconf libtool \
-            pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev \
-            libtinfo5 cmake libtool-bin
-
-      # 4. Install Buildozer & Cython Stabil
+            build-essential git ffmpeg libsdl2-dev libsdl2-image-dev \
+            libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
+            libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev \
+            libltdl-dev libffi-dev libssl-dev autoconf autotools-dev
+          
+      # 4. INSTAL BUILDOZER & CYTHON (Versi Khusus)
+      # Cython wajib versi 0.29.33 agar tidak error!
       - name: Install Buildozer
         run: |
           pip install --upgrade pip
           pip install buildozer
-          pip install "cython<3.0.0"
+          pip install Cython==0.29.33
 
-      # 5. BERSIHKAN SYSTEM (Penting!)
-      # Kita paksa Buildozer untuk download SDK Android dari nol
+      # 5. BERSIHKAN FILE LAMA & BUILD
       - name: Build APK
         run: |
+          rm -rf .buildozer
           yes | buildozer android debug
 
-      # 6. Upload Hasil APK
-      - name: Upload Artifact
+      # 6. UPLOAD HASIL
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: autotube-apk
+          name: package
           path: bin/*.apk
