--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Android (Docker)
+name: Build APK Manual (Final)
 on:
   push:
     branches: [ main ]
@@ -6,28 +6,55 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+
     steps:
       # 1. Ambil kode
       - uses: actions/checkout@v4
 
-      # 2. Perbaiki izin file (Penting untuk Docker)
-      - name: Fix permissions
-        run: |
-          sudo chmod +x main.py
-          sudo chmod +x buildozer.spec
-          sudo chown -R $USER:$USER .
-
-      # 3. Build menggunakan Docker (Alat sudah siap pakai)
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
+      # 2. Siapkan Java 17 (Wajib untuk AdMob)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          command: buildozer android debug
-          buildozer_version: master
+          distribution: 'temurin'
+          java-version: '17'
 
-      # 4. Upload Hasil
-      - name: Upload APK
+      # 3. Siapkan Python 3.9 (Paling stabil untuk Kivy)
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      # 4. Hapus Cache Lama (PENTING: Agar error download tadi hilang)
+      - name: Clean Cache
+        run: |
+          rm -rf .buildozer
+          rm -rf bin
+
+      # 5. Instal kebutuhan sistem (Dependencies)
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential git ffmpeg libsdl2-dev libsdl2-image-dev \
+            libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
+            libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev \
+            libltdl-dev libffi-dev libssl-dev autoconf autotools-dev zip \
+            unzip
+
+      # 6. Instal Buildozer Terbaru
+      - name: Install Buildozer
+        run: |
+          pip install --upgrade pip
+          pip install --upgrade buildozer
+          pip install Cython==0.29.33
+
+      # 7. Mulai Build (Dengan konfirmasi 'yes')
+      - name: Build APK
+        run: yes | buildozer android debug
+
+      # 8. Upload APK
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: package
